# DIY-AI-Assistant

./: .env.example  .gitignore  LICENSE  README.md  config.py  index.html  pyproject.toml
scripts/: telegram_bot.py  websocket_bot.py
src/audio_formatter/: services.py
src/fs_manager/: services.py
src/generative_ai/: services.py
src/shared/: exceptions.py  hash.py
src/speech2text/: services.py
src/telegram_api/: services.py
src/text2speech/: services.py
